# tuneflow-py

./: .gitignore  .gitmodules  CONTRIBUTE.md  LICENSE  README.md  README.zh.md  azure-pipelines.yml  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
docs/images/: pipeline_flow_en
docs/md/develop/: deploy.md  devkit.md  getting-started.md
scripts/: build_protos.sh  publish.sh  test.sh
src/tuneflow_py/: __init__.py  base_plugin.py  utils.py
src/tuneflow_py/descriptors/: audio_plugin.py  audio_plugin_descriptor.py  clip_descriptor.py  common.py  param.py  plugin.py  song_access.py  text.py  widget.py
src/tuneflow_py/models/: audio_plugin.py  automation.py  clip.py  lyric.py  marker.py  note.py  song.py  tempo.py  time_signature.py  track.py
src/tuneflow_py/models/protos/: song_pb2.py
test/: caravan.test.golden.mid  test_audio_clip.py  test_automation.py  test_lyric.py  test_marker.py  test_midi_clip.py  test_note.py  test_song.py  test_track.py  test_utils.py
